// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ScrollArea Component > should match the snapshot > horizontal 1`] = `
<body>
  <div>
    <div
      class="relative overflow-hidden"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: scroll; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`ScrollArea Component > should match the snapshot > vertical 1`] = `
<body>
  <div>
    <div
      class="relative overflow-hidden"
      dir="ltr"
      style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
    >
      <style>
        [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
      </style>
      <div
        class="h-full w-full rounded-[inherit]"
        data-radix-scroll-area-viewport=""
        style="overflow-x: hidden; overflow-y: scroll;"
      >
        <div
          style="min-width: 100%; display: table;"
        >
          <div>
            Test Child
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
